<resources>
    <string name="app_name">Igor</string>

    <!-- Strings related to MenuDrawer -->
    <string-array name="menu_array">
        <item>Aventuras</item>
        <item>Livros</item>
        <item>Conta</item>
        <item>Dados</item>
        <item>Notificações</item>
        <item>Configurações</item>
        <item>Sair</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_sign_in_short">CRIAR</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_link_to_register">criar conta</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">esqueci minha senha</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="male">Homem</string>
    <string name="female">Mulher</string>
    <string name="retype_password">Repita a senha</string>
    <string name="user_name">Nome</string>

    <!-- Strings related to createAdventure -->

    <string name="criar_aventura_title">Criar Aventura</string>

    <!-- Strings related to Edit sessions and adventure-->
    <string name="edit_session_label">Editar Sessão</string>
    <string name="edit_session_summary_hint">Crie um resumo para a próxima sessão</string>
    <string name="edit_adventure_label">Editar Aventura</string>
    <string name="edit_adventure_summary_hint">Crie um resumo para a aventura</string>
    <string name="create_adventure_hint">Dê um nome para sua aventura</string>
    <string name="create_session_label">Criar Sessão</string>
    <string name="create_session_hint_label">Dê um nome à próxima sessão</string>
    <string name="create_session_edit_text_hint">Dê um nome para sua sessão</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Editar</string>
    <string name="antion_order">Ordenar</string>
    <string name="no_master_assigned">Aventura sem Mestre</string>
    <string name="create_character_label">Criar Personagem</string>
    <string name="create_character_name_player_hint">Dê nome do Jogador</string>
    <string name="create_character_summary_label">Resumo do Personagem</string>
    <string name="create_character_summary_hint">Escreva o resumo do personagem</string>
    <string name="create_character_player_name_label">Nome Jogador</string>
    <string name="create_character_name_label">Nome Personagem</string>
    <string name="create_character_name_hint">Dê nome para o personagem</string>
    <string name="create_character_no_player_name_selected">Selecione para adicionar \no nome do jogador</string>


    <string name="placeholder">Placeholder</string>
    <string name="singapore">Singapore</string>

    <!-- Dice Roll Dialog -->
    <string name="roll_dialog_title">Escolha os dados</string>
    <string name="confirm_roll">Lançar</string>
    <string name="cancel_roll">Cancelar</string>
    <string name="dice_type">Número de lados:</string>
    <string name="dice_number">Número de dados:</string>
    <string name="dice_modifier">Modificador:</string>
    <string name="incorrect_dice_type">O mínimo de faces de um dado é 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
