<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context="com.devapps.igor.Screens.DiceRoller.NewRollDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roll_dialog_type_text"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dice_type" />

        <EditText
            android:id="@+id/roll_dialog_type_input"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/text_color_1"
            android:text="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roll_dialog_number_text"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dice_number"/>

        <EditText
            android:id="@+id/roll_dialog_number_input"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/text_color_1"
            android:text="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roll_dialog_modifier_text"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dice_modifier"/>

        <EditText
            android:id="@+id/roll_dialog_modifier_input"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/text_color_1"
            android:text="0"/>
    </LinearLayout>

</LinearLayout>
